feat: enhance user authentication by generating JWT on signin, update routes, and add error handling

--- a/views/partials/nav_bar.ejs
+++ b/views/partials/nav_bar.ejs
@@ -1,18 +1,8 @@
-<nav
-  class="navbar navbar-expand-lg bg-body-tertiar bg-dark"
-  data-bs-theme="dark"
->
+<nav class="navbar navbar-expand-lg bg-body-tertiar bg-dark" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Blogify</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNavDropdown"
-      aria-controls="navbarNavDropdown"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -24,13 +14,7 @@
           <a class="nav-link" href="#">Add Blog</a>
         </li>
         <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Muhammad Ali
           </a>
           <ul class="dropdown-menu">
